this makes me crazy

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,11 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
-    }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data source = dating.db"
-  }
+  
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Information"
+      }
+    },
+    "ConnectionStrings":{
+      "DefaultConnection": "Data source=datingDB.db"      
+    },
+    "TokenKey" : "super secret unguessable key super secret unguessable key super secret unguessable key",   
+  "CloudinarySetting" :{
+    "CloudName" :"dxp7fkz7c",
+    "ApiKey" : "384565233338826",
+    "ApiSecret" : "NKi7eBcFhVXCpiBFxy2EHVYW6tI"
+  }, 
+  "AllowedHosts": "*"
 }
