--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
+    "@angular/cdk": "^19.1.3",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
@@ -25,6 +26,7 @@
     "ng2-file-upload": "^8.0.0",
     "ngx-bootstrap": "^19.0.2",
     "ngx-spinner": "^17.0.0",
+    "ngx-timeago": "^3.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -45,8 +47,8 @@
   },
   "overrides": {
     "ng2-file-upload": {
-      "@angular/common" : "$@angular/common",
-      "@angular/core" : "@angular/core"
+      "@angular/common": "$@angular/common",
+      "@angular/core": "@angular/core"
     }
   }
 }
