--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,7 @@
       }
     },
     "ConnectionStrings":{
-      "DefaultConnection": "Data source=datingDB.db"      
+      "DefaultConnection": "Server=localhost,1433;Database=DatingDB;User Id=SA;Password=Password@1;TrustServerCertificate=True"      
     },
     "TokenKey" : "super secret unguessable key super secret unguessable key super secret unguessable key",   
   "CloudinarySetting" :{
